gave a defined height prop to the toolbar to fix content jump issues on smaller devices - fixed broken ipad size toolbar issues by modifying the media breakpoints - added SEO metadata and twitter meta data in html

--- a/src/Components/Markdown/markdown.module.scss
+++ b/src/Components/Markdown/markdown.module.scss
@@ -1,7 +1,7 @@
 .container {
 	display: flex;
 	width: 100%;
-	margin-top: 41px;
+	margin-top: 51px;
 }
 
 .md_editor {
